adds second row for expandable about section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 </head>
 
 <body>
-    <h1>Gaarder</h1>
-
-
     <!-- navbar from bootstrap -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light my-navbar">
             <a class="navbar-brand" href="#"><img src="./images/stocks.png"></a>
@@ -24,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Resume</a>
                 <a class="nav-link" href="#">Contact</a>
             </div>
             </div>
@@ -35,56 +32,78 @@
         <div class="my-jumbotroncopy">
             <div class="container">
                 <h1 class="display-4">Matt Gaarder</h1>
-                <p class="lead">Creative Software Enthusiast & Aspiring Front-End Web Developer</p>
+                <p class="lead">Creative Software Enthusiast & Web Developer</p>
             </div>
         </div>
     </div>
     <!-- end of jumbotron from bootstrap -->
     <div class="container-fluid">
         <div class="row">
-            <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+            <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                        <h5 class="card-title">About</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                        <p>
+                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                              About
+                            </button>
+                         </p>    
+                    </div>
+                </div>
+            </div>
+            <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Work</h5>
+                        <p class="card-text">LinkedIn Twitter GitHub etc.</p>
                         <a href="#" class="card-link">Card link</a>
                         <a href="#" class="card-link">Another link</a>
                     </div>
                 </div>
             </div>
-            <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+            <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
+                        <h5 class="card-title"></h5>
+                        <p class="card-text">Contact</p>
+                        <a href="#" class="card-link"> et at nostrmollitia veritatis tempora iure perspiciatis, saepe nemo commodi animi. Debitis, ut.Card link</a>
                         <a href="#" class="card-link">Another link</a>
                     </div>
                 </div>
             </div>
-            <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+        </div>
+    <div class="container">
+        <div class="row">
+            <div class="card-container col-lg-12 col-md-6 col-sm-12">
+                <div class="collapse" id="collapseExample">
+                    <div class="card card-body">
+                      Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="card-container col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                        <h5 class="card-title">Front-end Development</h5>
+                        <p class="card-text">Responsive websites built for an optimal user experience that achieves your business goals.</p>
+                        <a href="#" class="card-link">Projects</a>
+                        <a href="#" class="card-link">More Projects</a>
                     </div>
                 </div>
             </div>
-            <div class="cardContainer col-lg-3 col-md-3 col-sm-12">
+            <div class="card-container col-lg-6 col-md-6 col-sm-12">
                 <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                    <div class="card-body right-background">
+                        <h5 class="card-title">Front-end Development</h5>
+                        <p class="card-text">Responsive websites built for an optimal user experience that achieves your business goals.</p>
                         <a href="#" class="card-link">Card link</a>
                         <a href="#" class="card-link">Another link</a>
                     </div>
@@ -92,46 +111,6 @@
             </div>
         </div>
     </div>
-
-    <div class="container-fluid">
-        <div class="row">
-            <div class="card-container col-lg-4 col-md-4 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card-container col-lg-4 col-md-4 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>
-            <div class="card-container col-lg-4 col-md-4 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
 
 
