adds icons to page

--- a/index.html
+++ b/index.html
@@ -56,15 +56,36 @@
                 </div>
             </div>
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Work</h5>
-                        <p class="card-text">LinkedIn Twitter GitHub etc.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                <div class="row">
+                    <div class="card-container col-lg-4 col-md-4 col-sm-12">
+                        <div class="card">
+                            <div class="card-body-nest">
+                                <img src="/images/icons8-twitter-circled-ios-16-filled/icons8-twitter-circled-250.png";>
+                                <a href="#" class="card-link"><h5 class="card-title">Twitter</h5></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container col-lg-4 col-md-4 col-sm-12">
+                        <div class="card">
+                            <div class="card-body-nest">
+                                <h5 class="card-title"></h5>
+                                <img src="/images/github-mark/github-mark.png";>
+                                <a href="#" class="card-link"><h5 class="card-title">GitHub</h5></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-container col-lg-4 col-md-4 col-sm-12">
+                        <div class="card">
+                            <div class="card-body-nest">
+                                <h5 class="card-title"></h5>
+                                <img src="/images/icons8-linkedin-circled-ios-16-filled/icons8-linkedin-circled-250.png";>
+                                <a href="#" class="card-link"><h5 class="card-title">LinkedIn</h5></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            
             <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                 <div class="card">
                     <div class="card-body">
