--- a/index.html
+++ b/index.html
@@ -76,27 +76,8 @@
             <div class="cardContainer col-lg-8 col-md-8 col-sm-12">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">About</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
-                        <p>
-                            <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                              About
-                            </button>
-                        </p>    
-                        <div class="container">
-                            <div class="row">
-                                <div class="card-container col-lg-12 col-md-6 col-sm-12">
-                                    <div class="collapse" id="collapseExample">
-                                        <div class="card card-body">
-                                          Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
-                                        </div>
-                                    </div>  
-                                </div>
-                            </div>
-                        </div>
+                        <h5 class="card-title">At a glance</h5>
+                        <p class="card-text">I am an aspiring front-end web developer enrolled in a bootcamp using tools such as bootstrap, javaScript, etc. I am also a speaker of Japanese. I like to make things so have a random selection of content from doodles to short documentaries created with Adobe Products (Photoshop, Illustrator, Premiere Pro)</p>
                     </div>
                 </div>
             </div>
@@ -147,7 +128,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Front-end Development</h5>
-                        <p class="card-text">Responsive websites built for an optimal user experience that achieves your business goals.</p>
+                        <p class="card-text">Responsive websites built for an optimal user experience that achieves your business goals. These are all the skills and things I can do for you.</p>
                         <a href="#" class="card-link">Projects</a>
                         <a href="#" class="card-link">More Projects</a>
                     </div>
@@ -162,6 +143,50 @@
                         <a href="#" class="card-link">Another link</a>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Project 1</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Project 2</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Project 3</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Project 4</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
