--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="cardContainer col-lg-8 col-md-8 col-sm-12">
-                <div class="card">
+                <div class="card about-intro">
                     <div class="card-body">
-                        <h5 class="card-title">At a glance</h5>
-                        <p class="card-text">I am an aspiring front-end web developer enrolled in a bootcamp using tools such as bootstrap, javaScript, etc. I am also a speaker of Japanese. I like to make things so have a random selection of content from doodles to short documentaries created with Adobe Products (Photoshop, Illustrator, Premiere Pro)</p>
+                        <p class="card-text">I am an aspiring front-end web developer enrolled in a bootcamp using tools such as bootstrap, javaScript, etc. I am also a speaker of Japanese. I like to make things so have a random selection of content from doodles to short documentaries created with Adobe Products (Photoshop, Illustrator, Premiere Pro). I like rick-climbing, samurai movies, competetive fighting games and more!</p>
                     </div>
                 </div>
             </div>
@@ -122,9 +121,9 @@
             </div>
         </div>
     
-    <div class="container-fluid">
+    <div class="container-fluid front-end-container">
         <div class="row">
-            <div class="card-container col-lg-6 col-md-6 col-sm-12">
+            <div class="card-container col-lg-6 col-md-6 col-sm-12 card-container-front-end">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Front-end Development</h5>
@@ -134,7 +133,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card-container col-lg-6 col-md-6 col-sm-12">
+            <div class="card-container col-lg-6 col-md-6 col-sm-12 card-container-front-end-image">
                 <div class="card">
                     <div class="card-body right-background">
                         <h5 class="card-title">Front-end Development</h5>
@@ -191,8 +190,35 @@
         </div>
     </div>
     </div>
-
-
+<div class="container-fluid">
+        <div class="row">
+            <div class="card-container col-lg-6 col-md-6 col-sm-12">
+                <div class="card">
+                    <div class="card-body left-background">
+                        <h5 class="card-title">Front-end Development</h5>
+                        <p class="card-text">Responsive websites built for an optimal user experience that achieves your business goals. These are all the skills and things I can do for you.</p>
+                        <a href="#" class="card-link">Projects</a>
+                        <a href="#" class="card-link">More Projects</a>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container col-lg-6 col-md-6 col-sm-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Creative Software</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque dolorem exercitationem itaque laudantium aut nemo.</p>
+                        <a href="#" class="card-link">Card link</a>
+                        <a href="#" class="card-link">Another link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <i class="fab fa-html5 fa-4x"></i>
+    <i class="fab fa-css3-alt fa-4x"></i>
+    <i class="fab fa-js-square fa-4x"></i>
+    <i class="fab fa-react fa-4x"></i>
+    <i class="fab fa-node-js fa-4x"></i>
     <section class="container-fluid sign-up">
         <div class="row">
             <form>
@@ -253,7 +279,7 @@
         crossorigin="anonymous"></script>
 
     
-
+        <script src="https://kit.fontawesome.com/79df7ed02a.js" crossorigin="anonymous"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
