adds more assets and continued layout changes

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     
-    <div class="container-fluid front-end-container">
+    <div class="container-fluid">
         <div class="row">
             <div class="card-container col-lg-6 col-md-6 col-sm-12 card-container-front-end">
                 <div class="card">
@@ -132,6 +132,65 @@
                         <a href="#" class="card-link">More Projects</a>
                     </div>
                 </div>
+                    <div class="row">
+                        <div class="card-container col-lg-12 col-md-12 col-sm-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5>My Skills
+                                    </h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5><i class="fab fa-css3-alt fa-4x"></i></h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5><i class="fab fa-js-square fa-4x"></i></h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container col-lg-4 col-md-4 col-sm-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5><i class="fab fa-react fa-4x"></i></h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5><i class="fab fa-node-js fa-4x"></i></h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5><i class="fab fa-html5 fa-4x"></i></h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5><img src="/assets/adobe-photoshop-logo.png"></h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-container col-lg-3 col-md-3 col-sm-12">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5><img src="/assets/premiere-pro.png">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
             <div class="card-container col-lg-6 col-md-6 col-sm-12 card-container-front-end-image">
                 <div class="card">
@@ -147,7 +206,7 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="card-container col-lg-3 col-md-3 col-sm-12">
+            <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
@@ -157,7 +216,7 @@
                     </div>
                   </div>
             </div>
-            <div class="card-container col-lg-3 col-md-3 col-sm-12">
+            <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
@@ -167,7 +226,7 @@
                     </div>
                   </div>
             </div>
-            <div class="card-container col-lg-3 col-md-3 col-sm-12">
+            <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
@@ -177,7 +236,7 @@
                     </div>
                   </div>
             </div>
-            <div class="card-container col-lg-3 col-md-3 col-sm-12">
+            <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
@@ -192,7 +251,7 @@
     </div>
 <div class="container-fluid">
         <div class="row">
-            <div class="card-container col-lg-6 col-md-6 col-sm-12">
+            <div class="card-container col-lg-6 col-md-6 col-sm-12 card-container-second">
                 <div class="card">
                     <div class="card-body left-background">
                         <h5 class="card-title">Front-end Development</h5>
@@ -201,8 +260,9 @@
                         <a href="#" class="card-link">More Projects</a>
                     </div>
                 </div>
+                
             </div>
-            <div class="card-container col-lg-6 col-md-6 col-sm-12">
+            <div class="card-container col-lg-6 col-md-6 col-sm-12 card-container-second">
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Creative Software</h5>
@@ -214,11 +274,6 @@
             </div>
         </div>
     </div>
-    <i class="fab fa-html5 fa-4x"></i>
-    <i class="fab fa-css3-alt fa-4x"></i>
-    <i class="fab fa-js-square fa-4x"></i>
-    <i class="fab fa-react fa-4x"></i>
-    <i class="fab fa-node-js fa-4x"></i>
     <section class="container-fluid sign-up">
         <div class="row">
             <form>
