--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
             <div class="card-container col-lg-3 col-md-3 col-sm-12 card-container-project">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="/assets/WeAreHiring.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Project 2</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
