rearrange files to try get pages to work

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="card-container-nav col-lg-4 col-md-4 col-sm-12">
             <div class="card">
                 <div class="class-body">
-                    <div class="main-about-card">
+                    <div class="main-card">
                         <h5>About</h5>
                     </div>
                 </div>
@@ -51,7 +51,7 @@
         <div class="card-container-nav col-lg-4 col-md-4 col-sm-12">
             <div class="card">
                 <div class="class-body">
-                    <div class="main-work-card">
+                    <div class="main-card">
                         <h5>Work</h5>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
         <div class="card-container-nav col-lg-4 col-md-4 col-sm-12">
             <div class="card">
                 <div class="class-body">
-                    <div class="main-contact-card">
+                    <div class="main-card">
                         <h5>Contact</h5>
                     </div>
                 </div>
